@@ -1,4 +1,9 @@
 2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: made set_partition_type() a bit more verbose
+	  and did some cleanups.
+
+2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/Partition.h,
 	  src/Partition.cc: added get_sector()
